force-app/main/default/objects/Interaction_Tag__c/Interaction_Tag__c.object-meta.xml
<CustomObject>
    <description>Master data to store all Tag values to be displayed on Custom LWCs</description>
    <label>Interaction Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>