force-app/main/default/objects/Interaction_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Tag Value</description>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>