force-app/main/default/objects/Interaction_Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>